## ****************************************************************************
## 
##  Copyright (c) 2015 by CPqD. All rights reserved.
## 
##  TODO(ciroc): add copyright information
## 
## ****************************************************************************
## 
##  Makefile.am --
##  Process this file with automake to produce a Makefile.in file
##
##  Original Author: Ciro Ceissler, CPqD, 23-02-2015
##
## ****************************************************************************
##
##  MODIFICATION LOG - modifiers, enter your name, affiliation, date and
##  changes you are making here.
##
##      Name, Affiliation, Date:
##  Description of Modification:
##
## ****************************************************************************

SUBDIRS = \
	src

DOC_FILES = \
  AUTHORS \
  COPYING \
  ChangeLog \
  INSTALL \
  LICENSE \
  NEWS \
  README \
  RELEASENOTES

## Taf!
