## ****************************************************************************
##
##  Copyright (c) 2015 by Ceissler. All rights reserved.
##
## ****************************************************************************
##
##  Makefile.am --
##  Process this file with automake to produce a Makefile.in file
##
##  Original Author: Ciro Ceissler, Ceissler, 22-05-2015
##
## ****************************************************************************
##
##  MODIFICATION LOG - modifiers, enter your name, affiliation, date and
##  changes you are making here.
##
##      Name, Affiliation, Date:
##  Description of Modification:
##
## ****************************************************************************

SUBDIRS =

H_FILES = \
	driver.h \
	monitor.h \
	dut.h

CXX_FILES = \
	driver.cpp \
	monitor.cpp \
	dut.cpp \
	main.cpp

bin_PROGRAMS = simple_lt

simple_lt_SOURCES = $(CXX_FILES) $(H_FILES)
simple_lt_LDADD   =

## Taf!
